
gfxdir=$(datadir)/@PACKAGE@/gfx

gfx_DATA = \
box.gif    demo5.gif  edge1red.gif  edge4.gif   new.gif   real.gif \
demo1.gif  demo6.gif  edge2.gif     next.gif    think.gif \
demo2.gif  demo7.gif  edge2red.gif  help.gif    ok.gif    won.png \
demo3.gif  demo8.gif  edge3.gif     light.gif   prev.gif  giveup.gif\
demo4.gif  edge1.gif  edge3red.gif  mouse.gif   quit.gif  font.png

EXTRA_DIST = $(gfx_DATA)
